# dk_vm

./: .gitignore  CMakeLists.txt  Dockerfile  build.zsh  default.nix  header.h  main.c  out.S  readme.md  sys.S
backend/x86_64/: out.S  std.S
cli/: main.c
compiler/: bytecode_parser.c  bytecode_parser.h  code_gen.c  code_gen.h  symbol_table.c  symbol_table.h
lex/: dk.h  dk_ast.h  dk_lexer.h  dk_parser.h  dk_token.h  example.kk  import.kk  variable.kk  variable.kk.bc
vm/: main.c  vm.c  vm.h
